lib/bait/tests/inout_error/generics/concrete_types_not_match.in.bt
fun add[Z](a Z, b Z) Z {
	return a + b
}

add(1, 2)
add('a', false)
